llvm-gcc-4.2-2.9/gcc/testsuite/gcc.apple/mac68k-align-unsup.c
/* APPLE LOCAL file 64-bit */
/* Darwin (Mac OS X) alignment exercises.  */

/* { dg-do compile { target powerpc-*-darwin[8912]* } } */
/* { dg-options "-m64 -malign-mac68k" } */

/* { dg-error "-malign-mac68k is not allowed for 64-bit Darwin" "" { target *-*-* } 0 } */

main() {}
